--- a/style.css
+++ b/style.css
@@ -15,43 +15,96 @@ body {
 }
 
 /* Make the <h1> element #9b59b6*/
+h1 {
+    color: #9b59b6;
+}
     
 /* Make all <h2> elements orange (pick your own hexadecimal orange)*/
-  
-  
+h2  {
+    color: #d35f00;
+}
+
 /* Make all <li> elements blue (pick your own hexadecimal blue)*/
-  
+  li {
+    color: #0000ff;
+  }
   
 /*Change the background on every paragraph to be yellow*/
-  
+  p {
+    background: yellow;
+  }
 
 /*Make all inputs have a 3px red border*/
+
+input {
+    border: #ff0000 3px solid;
+}
   
 /* Give everything with the class 'hello' an almost-white background () */
     
+.hello {
+    background: #ebebeb;
+}
 /* Give the element with id 'special' a 2px solid blue border (pick your own rgb blue)*/
   
+#special {
+   border: rgb(0, 0, 255) 2px solid;
+}
+
 /*Make all the <p>'s that are nested inside of divs 25px font (font-size: 25px)*/
+div p {
+    font-size: 25px;
+}
   
 /*Make only inputs with type 'text' have a gray background*/
+input[type="text"] {
+    background: gray;
+}
   
 /* Give both <p>'s inside the 3rd <div> a pink background*/
-  
+div:nth-of-type(3) p {
+    background: #ff91f6;
+  }
 /* Give the 2nd <p> inside the 3rd <div> a 5px white border*/
+div:nth-of-type(3) p:nth-of-type(2) {
+    border: #ffffff 5px solid;
+  }
   
 /* Make the <em> in the 3rd <div> element white and 20px font */
-  
+
+div:nth-of-type(3) em {
+    color: #ffffff;
+    font-size: 20px;
+  }
+
 /* BONUS CHALLENGES - You may need to research some other selectors and properties */
   
 /* Make all checked checkboxes have a left margin of 50px */
 
+input[type="checkbox"]:checked {
+    margin-left: 50px;
+  }
+
 /* Make the <label> elements all UPPERCASE without changing the HTML(definitely look this one up*/
+
+label {
+    text-transform: uppercase;
+  }
   
 /* Make the first letter of the element with id 'special' green and 100px font size(font-size: 100)*/
+
+#special::first-letter {
+    color: green;
+    font-size: 100px;
+  }
   
 /* Make the <h1> element's color change to blue when hovered over */
-  
+  h1:hover {
+    color: rgb(0, 0, 255);
+  }
 /* Make the <a> element's that have been visited gray */
-  
+  a:visited {
+    color: #aaaaaa;
+  }
 
   
